--- a/package.json
+++ b/package.json
@@ -48,5 +48,17 @@
     "eslint-plugin-standard": "^4.0.0",
     "eslint-plugin-vue": "^7.0.0",
     "typescript": "~4.1.5"
-  }
+  },
+  "description": "## Project setup ``` yarn install ```",
+  "main": ".eslintrc.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/DevHumbleChris/code-chris.git"
+  },
+  "author": "AmChrisKE",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/DevHumbleChris/code-chris/issues"
+  },
+  "homepage": "https://github.com/DevHumbleChris/code-chris#readme"
 }
