--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "epic-spinners": "^1.1.0",
     "postcss": "^7",
     "register-service-worker": "^1.7.1",
-    "tailwindcss": "^2.2.19",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0-0"
