--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "postcss": "^7",
     "register-service-worker": "^1.7.1",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat",
+    "typewriter-vue": "^0.5.17",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0-0"
