--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,8 @@
   "description": "coder chris backend",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "ts-node-dev --respawn ./src/app.ts",
+    "dev": "nodemon --exec ts-node ./src/app.ts"
   },
   "author": "AmChrisKE",
   "license": "MIT",
