--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "typewriter-vue": "^0.5.17",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
+    "vue-writer": "^1.1.2",
     "vuex": "^4.0.0-0"
   },
   "devDependencies": {
